# portland

./: README  README.release-howto
dapi/: .cvsignore  AUTHORS  BUILD  Makefile.am  README  TODO  configure.ac
dapi-dbus/: AUTHORS  README  autogen.sh
dapi-dbus/data/: Makefile.am  dapi-command.xml  org.freedesktop.dapi.service.in
dapi-dbus/doc/: status-report-20060714.txt
dapi-dbus/gnome/: .cvsignore  ChangeLog-pre-0.2  Makefile.am  README  acinclude.m4  configure.ac
dapi-dbus/gnome/data/: .cvsignore
dapi-dbus/gnome/src/: .cvsignore  dapi-command.c  dapi-command.h  dapi-debug.h  dapi-gnome.c
dapi-dbus/gnome/tests/: .cvsignore  Makefile.am  README  test-addressbook.c  test-api.c  test-client.c
dapi-dbus/kde3/: AUTHORS  configure.in.in
dapi-dbus/kde3/admin/: cvs.sh  cvs.sh.mine
dapi-dbus/kde3/src/: Makefile.am  dapi-common.h  dapi.cpp  dapi.h  dapidaemon.cpp  dapidaemon.h  dapiimpl.cpp  dapiimpl.h  kabchandler.cpp  kabchandler.h  main.cpp
dapi-dbus/src/: Makefile.am  dapi-daemon.c  dapi-debug.c  dapi-gnome.h
dapi-dbus/tests/: test-addressbook.c  test-ebook-async-get-contact.c  tests.h
dapi/doc/: API.txt  C-API.txt  C-HOWTO.txt
dapi/generic/: .cvsignore  Makefile.am  commands.c  commands.h  main.c
dapi/include/: Makefile.am
dapi/include/dapi/: Makefile.am
dapi/kde/: .cvsignore  LICENSE  configure.in.in
dapi/kde/admin/: acinclude.m4.in
dapi/kde/daemon/: .cvsignore  Makefile.am  handler.cpp  handler.h  kabchandler.cpp  kabchandler.h  main.cpp
dapi/lib/: Makefile.am  callbacks.c  callbacks.h  calls.c  calls.h  comm.c  comm.h  comm_internal.h  utils.c  utils.h
dapi/tests/: .cvsignore  Makefile.am  test_addressbook.c  test_async.c  test_callbacks.c  test_calls.c  test_capabilities.c  test_comm.c  test_fallback.c  test_mailto.c  test_remotefile.c  test_runasuser.c  test_screensaving.c
libxdg-vfs/libxdg-vfs-client/: ChangeLog  README  configure.ac
libxdg-vfs/libxdg-vfs-client/doc/: libxdg-vfs.html
libxdg-vfs/libxdg-vfs-client/src/: .cvsignore  Makefile.am  xdg_vfs_client.c  xdg_vfs_client.h  xdg_vfs_errstrs.c  xdg_vfs_forkexec.c  xdg_vfs_forkexec.h
libxdg-vfs/libxdg-vfs-client/tests/: Makefile.am  sample1_multi.c  sample2_getfile.c  sample3_putfile.c  sample4_copy.c  sample5_mount.c  sample6_monitor.c  test1.c
libxdg-vfs/xdg-vfs-browser-demo/: .cvsignore  README  configure.ac  setpaths.sh  test.sh
libxdg-vfs/xdg-vfs-browser-demo/src/: Makefile.am  xdg_vfs_browser.c
libxdg-vfs/xdg-vfs-gnome/: .cvsignore  AUTHORS  README  configure.ac
libxdg-vfs/xdg-vfs-gnome/desc/: xdg-vfs.xml
libxdg-vfs/xdg-vfs-gnome/src/: Makefile.am  xdg_vfs.c  xdg_vfs.h  xdg_vfs_gnome.c  xdg_vfs_gnome.h  xdg_vfs_gnome_monitor.c  xdg_vfs_gnome_volumes.c
libxdg-vfs/xdg-vfs-kde/: .cvsignore  AUTHORS  Makefile.am  README  configure.in.in
libxdg-vfs/xdg-vfs-kde/src/: .cvsignore  Makefile.am  xdg_vfs_common.h  xdg_vfs_kde.cpp  xdg_vfs_kde.h
xdg-utils/: ChangeLog  Makefile.in  README  RELEASE_NOTES  TODO  configure  configure.ac
xdg-utils/doc/: xdg-mime.1.txt  xdg-open.1.txt  xdg-su.1.txt
xdg-utils/scripts/: HACKING  Makefile.in  README  generate-help-script.awk  xdg-copy  xdg-copy.in  xdg-desktop  xdg-desktop-icon  xdg-desktop-icon.in  xdg-desktop-menu  xdg-desktop-menu.in  xdg-desktop.in  xdg-email  xdg-email.in  xdg-file-dialog  xdg-file-dialog.in  xdg-icon  xdg-icon-resource  xdg-icon-resource.in  xdg-icon.in  xdg-menu  xdg-menu.in  xdg-mime  xdg-mime.in  xdg-open  xdg-open.in  xdg-screensaver  xdg-screensaver.in  xdg-settings  xdg-settings.in  xdg-su  xdg-su.in  xdg-terminal  xdg-terminal.in  xdg-utils-common.in
xdg-utils/scripts/desc/: xdg-copy.xml  xdg-desktop-icon.xml  xdg-desktop-menu.xml  xdg-desktop.xml  xdg-email.xml  xdg-file-dialog.xml  xdg-icon-resource.xml  xdg-icon.xml  xdg-menu.xml  xdg-mime.xml  xdg-open.xml  xdg-screensaver.xml  xdg-su.xml  xdg-terminal.xml
xdg-utils/scripts/html/: index.html  xdg-copy.html  xdg-desktop-icon.html  xdg-desktop-menu.html  xdg-desktop.html  xdg-email.html  xdg-file-dialog.html  xdg-icon-resource.html  xdg-icon.html  xdg-menu.html  xdg-mime.html  xdg-open.html  xdg-screensaver.html  xdg-su.html
xdg-utils/scripts/man/: xdg-copy.1  xdg-desktop-icon.1  xdg-desktop-menu.1  xdg-desktop.1  xdg-email.1  xdg-file-dialog.1  xdg-icon-resource.1  xdg-icon.1  xdg-menu.1  xdg-mime.1  xdg-open.1  xdg-screensaver.1  xdg-su.1
xdg-utils/scripts/xsl/: README  sharedmime2mimelnk.xsl
xdg-utils/tests/: Makefile.in  README  TODO  t.xdg-copy  t.xdg-desktop  t.xdg-screensaver  testrun  tet_run
xdg-utils/tests/generic/: t.bogus_arg  t.help  t.manual  t.no_arg  t.version
xdg-utils/tests/include/: desktop_environment  linux_distro  system_info  tempfile.sh  testassertions.sh  testcontrol.sh  testdep.sh  testfuncs.sh
xdg-utils/tests/xdg-desktop-icon/: NOTES  t.02-plain_file_install  t.03-plain_file_uninstall  t.04-desktop_icon_install  t.05-desktop_icon_uninstall  t.apply_generic  t.desktop_icon_install  t.desktop_icon_uninstall  t.notexist_file_uninstall  t.plain_file_install  t.plain_file_uninstall
xdg-utils/tests/xdg-desktop-menu/: t.00-apply_generic  t.01-menu_user_forceupdate  t.02-menu_system_as_nonroot  t.03-menu_system_forceupdate  t.10-simple_menu_item_user_install  t.11-simple_menu_item_user_uninstall  t.12-menu_user_install  t.13-menu_user_uninstall  t.14-menu_install_category  t.20-simple_menu_item_system_install  t.21-simple_menu_item_system_uninstall  t.22-menu_system_install  t.23-menu_system_uninstall  t.apply_generic  t.menu_system_as_nonroot  t.menu_system_install  t.menu_system_uninstall  t.menu_user_install  t.menu_user_uninstall  t.simple_menu_item_system_install  t.simple_menu_item_system_uninstall  t.simple_menu_item_user_install  t.simple_menu_item_user_uninstall
xdg-utils/tests/xdg-email/: t.00-apply_generic  t.10-email_basic  t.11-email_subj  t.12-email_cc_args  t.13-email_multi_address  t.20-email_uri  t.21-email_uri_multi_address  t.22-email_mix_args_uri  t.30-email_attach  t.31-email_attach_full_path  t.32-email_missing_attach  t.apply_generic  t.email_attach  t.email_attach_full_path  (+8 more)
(+83 files in other folders)
