noinst_PROGRAMS = test_comm test_calls test_runasuser test_screensaving test_mailto test_remotefile test_async \
    test_capabilities test_callbacks test_fallback

test_comm_SOURCES = test_comm.c
test_comm_LDADD = ../lib/libdapi.la
test_comm_LDFLAGS = $(all_libraries)

test_calls_SOURCES = test_calls.c
test_calls_LDADD = ../lib/libdapi.la
test_calls_LDFLAGS = $(all_libraries)

test_runasuser_SOURCES = test_runasuser.c
test_runasuser_LDADD = ../lib/libdapi.la
test_runasuser_LDFLAGS = $(all_libraries)

test_screensaving_SOURCES = test_screensaving.c
test_screensaving_LDADD = ../lib/libdapi.la
test_screensaving_LDFLAGS = $(all_libraries)

test_mailto_SOURCES = test_mailto.c
test_mailto_LDADD = ../lib/libdapi.la
test_mailto_LDFLAGS = $(all_libraries)

test_remotefile_SOURCES = test_remotefile.c
test_remotefile_LDADD = ../lib/libdapi.la
test_remotefile_LDFLAGS = $(all_libraries)

test_async_SOURCES = test_async.c
test_async_LDADD = ../lib/libdapi.la
test_async_LDFLAGS = $(all_libraries)

test_capabilities_SOURCES = test_capabilities.c
test_capabilities_LDADD = ../lib/libdapi.la
test_capabilities_LDFLAGS = $(all_libraries)

test_callbacks_SOURCES = test_callbacks.c
test_callbacks_LDADD = ../lib/libdapi.la
test_callbacks_LDFLAGS = $(all_libraries)

test_fallback_SOURCES = test_fallback.c
test_fallback_LDADD = ../lib/libdapi.la
test_fallback_LDFLAGS = $(all_libraries)

INCLUDES = -I$(top_srcdir)/include $(all_includes)
